--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "docs.lilaccs.dev",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "start-prod": "cross-env NODE_ENV=production next start -p %PORT%",
     "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.0-canary.51",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -41,22 +37,15 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
-    "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
-    "gray-matter": "^4.0.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-auth": "^4.24.11",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "9.7.0",
@@ -64,12 +53,10 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "sharp": "^0.34.2",
-    "slugify": "^1.6.6",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.1.2",
+    "vaul": "1.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
